# healthcare-portal

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIGURATION.md  DATABASE_SCHEMA.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.txt  GEMINI.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SUPABASE_SETUP.md  UPGRADE_GUIDE.md  UPGRADE_SUMMARY.md  app.py  data_supabase.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_local_db.py
sql/: add_missing_columns.sql  create_admin.sql  seed_data.sql  supabase_schema.sql
sql/migrations/: v3_upgrade.sql
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html  login.html  profile.html  register.html
templates/admin/: dashboard.html
templates/appointments/: book.html  details.html  list.html
templates/doctor/: dashboard.html
templates/errors/: 403.html  404.html  500.html
templates/medical_records/: add.html  list.html
templates/nurse/: dashboard.html
templates/patient/: dashboard.html
templates/patients/: details.html  list.html
