[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[project]
name = "healthcare-portal"
version = "2.0.0"
description = "Healthcare Portal - A comprehensive healthcare management system"
authors = [
    {name = "Healthcare Portal Team", email = "support@healthtechsolutions.com"},
]
dependencies = [
    "Flask>=2.3.3",
    "Flask-Login>=0.6.3",
    "Flask-WTF>=1.1.1",
    "WTForms>=3.0.1",
    "Werkzeug>=2.3.7",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.1",
    "supabase>=2.0.0",
    "Flask-CORS>=4.0.0",
    "email-validator>=2.0.0",
    "Flask-Session>=0.5.0",
    "Flask-Limiter>=3.5.0",
    "Flask-Caching>=2.1.0",
    "requests>=2.31.0",
    "validators>=0.22.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-flask",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"